# bookstore2

./: Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
bookstore/: asgi.py  settings.py  urls.py  wsgi.py
order/migrations/: 0001_initial.py
order/models/: __init__.py  order.py
order/serializers/: __init__.py
order/viewsets/: __init__.py
product/: apps.py
product/migrations/: 0001_initial.py
product/models/: __init__.py  category.py  product.py
product/serializers/: __init__.py
product/viewsets/: __init__.py
