[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Daniel Santos <drsantos20@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.25"
djangorestframework = "^3.14.0"
django-extensions = "^3.2.3"
django-debug-toolbar = "^3.8.1"
psycopg2-binary = "^2.9.9"
autopep8 = "^1.7.0"
isort = "^5.11.5"
whitenoise = "^5.3.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"